Creazione Studio correlazione tra MC e rendimenti + aggiornamenti

--- a/API Bybit.ipynb
+++ b/API Bybit.ipynb
@@ -266,6 +266,296 @@
    "source": [
     "# invia_messaggio_telegram(TOKEN_TELEGRAM, CHAT_ID_TELEGRAM, 'Altra prova')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Codice di ChatGPT o1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ccxt\n",
+    "import config_API_Bybit as cab\n",
+    "import math\n",
+    "import asyncio\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_key = 'LA_TUA_API_KEY'\n",
+    "api_secret = 'LA_TUA_API_SECRET'\n",
+    "token_telegram = 'IL_TOKEN_DEL_BOT_TELEGRAM'\n",
+    "id_chat_mio_gruppo = 'LA_TUA_CHAT_ID'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "################################################################################\n",
+    "# 1) Funzione per creare l'exchange Bybit già configurato\n",
+    "################################################################################\n",
+    "def get_bybit_exchange(api_key=cab.api_key, \n",
+    "                       api_secret=cab.api_secret, \n",
+    "                       sandbox=False):\n",
+    "    \"\"\"\n",
+    "    Restituisce un oggetto ccxt.bybit configurato con le chiavi API.\n",
+    "    \"\"\"\n",
+    "    exchange = ccxt.bybit({\n",
+    "        'apiKey': api_key,\n",
+    "        'secret': api_secret,\n",
+    "        'enableRateLimit': True,\n",
+    "        'options': {\n",
+    "            'adjustForTimeDifference': True,\n",
+    "        },\n",
+    "    })\n",
+    "    # Setta sandbox a True/False\n",
+    "    exchange.set_sandbox_mode(sandbox)\n",
+    "\n",
+    "    # Carica i mercati\n",
+    "    exchange.load_markets()\n",
+    "    return exchange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "################################################################################\n",
+    "# 2) Funzioni di base per Spot Trading\n",
+    "################################################################################\n",
+    "\n",
+    "def get_balance(exchange, crypto_symbol, account_type='spot'):\n",
+    "    \"\"\"\n",
+    "    Recupera il saldo di una specifica criptovaluta in un determinato account.\n",
+    "    :param exchange: l'oggetto ccxt.bybit (già configurato)\n",
+    "    :param crypto_symbol: simbolo, es. 'USDT'\n",
+    "    :param account_type: 'spot', 'funding', 'unified', ecc.\n",
+    "    :return: dizionario con i saldi { 'free': float, 'used': float, 'total': float }\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        balance = exchange.fetch_balance({'type': account_type, 'recvWindow': 20000})\n",
+    "        crypto_balance = balance.get(crypto_symbol, {'free': 0, 'used': 0, 'total': 0})\n",
+    "        return crypto_balance\n",
+    "    except Exception as e:\n",
+    "        print(f\"Errore durante il recupero del saldo per {crypto_symbol} nell'account {account_type}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "def buy_crypto_market(exchange, symbol, amount):\n",
+    "    \"\"\"\n",
+    "    Esegue un ordine di acquisto MARKET su Bybit (Spot).\n",
+    "    :param exchange: oggetto ccxt.bybit\n",
+    "    :param symbol: es. 'BTC/USDT'\n",
+    "    :param amount: quantità di BTC da acquistare\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        order = exchange.create_market_buy_order(symbol, amount)\n",
+    "        return order\n",
+    "    except Exception as e:\n",
+    "        print(f\"Errore buy_crypto_market su {symbol}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "def sell_crypto_market(exchange, symbol, amount):\n",
+    "    \"\"\"\n",
+    "    Esegue un ordine di vendita MARKET su Bybit (Spot).\n",
+    "    :param exchange: oggetto ccxt.bybit\n",
+    "    :param symbol: es. 'BTC/USDT'\n",
+    "    :param amount: quantità di BTC da vendere\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        order = exchange.create_market_sell_order(symbol, amount)\n",
+    "        return order\n",
+    "    except Exception as e:\n",
+    "        print(f\"Errore sell_crypto_market su {symbol}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "def set_trailing_stop_spot(exchange, symbol, side, amount, trigger_price, trail_offset):\n",
+    "    \"\"\"\n",
+    "    ESEMPIO TEORICO per piazzare un trailing stop su SPOT Bybit.\n",
+    "    Su Bybit Spot potrebbe non essere supportato nativamente.\n",
+    "    Questo snippet è da testare ed eventualmente adattare. Spesso\n",
+    "    è necessario fare uno \"stop-limit\" e aggiornarlo in loop.\n",
+    "    \"\"\"\n",
+    "    # Se side == 'buy' => piazzi uno stop-limit buy sopra il prezzo\n",
+    "    # Se side == 'sell' => piazzi uno stop-limit sell sotto il prezzo\n",
+    "    # 'trigger_price' è il prezzo di attivazione\n",
+    "    # 'trail_offset' potrebbe essere interpretato come differenza dal trigger\n",
+    "    try:\n",
+    "        params = {\n",
+    "            # Dipende dal tipo di ordine che Bybit accetta su Spot\n",
+    "            # In alcuni casi:\n",
+    "            # 'stopPrice': trigger_price,\n",
+    "            # 'timeInForce': 'GTC',\n",
+    "            # ...\n",
+    "        }\n",
+    "        # A volte su ccxt Bybit Spot si fa: create_order(symbol, type, side, amount, price, params)\n",
+    "        # Proviamo con uno stop-limit (fittizio).\n",
+    "        order_price = trigger_price  # es. un prezzo peggiore/migliore del mercato\n",
+    "        order = exchange.create_order(\n",
+    "            symbol, \n",
+    "            'stop_limit',  \n",
+    "            side, \n",
+    "            amount, \n",
+    "            order_price, \n",
+    "            params\n",
+    "        )\n",
+    "        return order\n",
+    "    except Exception as e:\n",
+    "        print(f\"Errore set_trailing_stop_spot su {symbol}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "def cancel_all_open_orders(exchange, symbol):\n",
+    "    \"\"\"\n",
+    "    Cancella tutti gli ordini aperti su uno specifico simbolo.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        orders = exchange.fetch_open_orders(symbol)\n",
+    "        for o in orders:\n",
+    "            order_id = o['id']\n",
+    "            exchange.cancel_order(order_id, symbol)\n",
+    "        return True\n",
+    "    except Exception as e:\n",
+    "        print(f\"Errore durante la cancellazione degli ordini aperti su {symbol}: {e}\")\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "def fetch_trade_history(exchange, symbol, limit=50):\n",
+    "    \"\"\"\n",
+    "    Recupera la trade history (ordini eseguiti).\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        return exchange.fetch_my_trades(symbol, limit=limit)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Errore durante il recupero della trade history su {symbol}: {e}\")\n",
+    "        return []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "################################################################################\n",
+    "# 3) Logica di trading a “ciclo completo”\n",
+    "################################################################################\n",
+    "\n",
+    "def trading_cycle():\n",
+    "    \"\"\"\n",
+    "    Esegue un ciclo completo di trading sul pair BTC/USDT in Spot:\n",
+    "    1. Imposta un trailing stop buy (senza prezzo attivazione) per iniziare.\n",
+    "    2. Quando scatta l'acquisto:\n",
+    "       - Imposta trailing buy + trailing sell con attivazione.\n",
+    "       - Cancella eventuali ordini obsoleti.\n",
+    "    3. Quando scatta un altro acquisto:\n",
+    "       - Cancella ordini rimanenti.\n",
+    "       - Rimposta trailing buy + trailing sell con attivazione.\n",
+    "    4. Quando finalmente avviene la vendita, finisce il ciclo e ricomincia.\n",
+    "    \"\"\"\n",
+    "    symbol = 'BTC/USDT'\n",
+    "    amount_to_buy = 0.001  # Esempio\n",
+    "    exchange = get_bybit_exchange()  # crea exchange live (o sandbox se vuoi)\n",
+    "    \n",
+    "    # 1. Imposta un (finto) trailing stop buy\n",
+    "    # Nota: su Bybit Spot non c'è un trailing stop buy \"nativo\" -> si simula\n",
+    "    # Ad esempio, creiamo uno STOP-LIMIT BUY a un prezzo X\n",
+    "    current_ticker = exchange.fetch_ticker(symbol)\n",
+    "    current_price = current_ticker['last']\n",
+    "    print(f\"Prezzo attuale di {symbol}: {current_price}\")\n",
+    "\n",
+    "    # Esempio di prezzo di trigger \"un po' sopra\" l'attuale\n",
+    "    trigger_price = current_price * 1.01  # 1% sopra l'attuale\n",
+    "    # Esempio offset\n",
+    "    trail_offset = 0.005  # 0.5%\n",
+    "    # Creiamo l'ordine (fittizio, in realta' e' uno stop-limit)\n",
+    "    # Avrai bisogno di testare come Bybit si comporta\n",
+    "    trailing_buy_order = set_trailing_stop_spot(\n",
+    "        exchange, \n",
+    "        symbol, \n",
+    "        'buy', \n",
+    "        amount_to_buy, \n",
+    "        trigger_price, \n",
+    "        trail_offset\n",
+    "    )\n",
+    "    print(\"Trailing buy (finto) creato:\", trailing_buy_order)\n",
+    "\n",
+    "    # In un mondo ideale, qui attendiamo che l'ordine venga eseguito\n",
+    "    # (monitoriamo ciclicamente lo stato dell'ordine).\n",
+    "    # Se eseguito => scatta \"on_buy_filled()\"\n",
+    "    # Se cancellato => scatta \"on_buy_cancelled()\" e si ricomincia\n",
+    "    # ...\n",
+    "    # Per esempio:\n",
+    "    while True:\n",
+    "        # Verifica se l'ordine è eseguito\n",
+    "        open_orders = exchange.fetch_open_orders(symbol)\n",
+    "        still_open = any(o['id'] == trailing_buy_order['id'] for o in open_orders if trailing_buy_order)\n",
+    "        if not still_open:\n",
+    "            # Ordine eseguito o cancellato\n",
+    "            # Controlliamo se eseguito (fetch order info)\n",
+    "            order_info = exchange.fetch_order(trailing_buy_order['id'], symbol)\n",
+    "            if order_info['status'] == 'closed':\n",
+    "                print(\"Ordine buy eseguito!\")\n",
+    "                # 2. Impostiamo trailing buy + trailing sell con attivazione\n",
+    "                # (esempio)\n",
+    "                cancel_all_open_orders(exchange, symbol)\n",
+    "                # Qui setti i tuoi parametri di trailing in base alla strategia\n",
+    "                # ...\n",
+    "                # Se poi scatta un nuovo buy, rifai la cancellazione e reimposti i trailing\n",
+    "                # ...\n",
+    "                # Poi attendi la vendita. Se scatta la vendita, il ciclo finisce\n",
+    "                print(\"Fine del ciclo, ricomincio...\")\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Ordine buy cancellato/manualmente chiuso. Riprovo.\")\n",
+    "                break\n",
+    "        else:\n",
+    "            print(\"Ordine buy ancora aperto, attendo 5 secondi...\")\n",
+    "            time.sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trades = fetch_trade_history(exchange, 'BTC/USDT', limit=10)\n",
+    "for t in trades:\n",
+    "    print(f\"Trade {t['id']}: side={t['side']}, qty={t['amount']}, price={t['price']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
