--- a/Calcolatore plusvalenze.ipynb
+++ b/Calcolatore plusvalenze.ipynb
@@ -105,9 +105,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Totale plusvalenze generate per BTC-EUR: 473.14\n",
+      "Totale plusvalenze generate per BTC-EUR: 724.59\n",
       "Totale plusvalenze generate per RNDR/RENDER-EUR: 19.77\n",
-      "Totale plusvalenze generate per LINK-EUR: 83.5\n",
+      "Totale plusvalenze generate per LINK-EUR: 248.31\n",
       "Totale plusvalenze generate per SEI-EUR: 0.55\n",
       "Totale plusvalenze generate per TIA-EUR: 1.22\n",
       "Totale plusvalenze generate per IMX-EUR: 1.21\n",
@@ -117,7 +117,7 @@
       "Totale plusvalenze generate per TAO-EUR: 0\n",
       "Totale plusvalenze generate per FET-USDC: 0\n",
       "\n",
-      "Totale plusvalenze generate in EUR: 587.47\n",
+      "Totale plusvalenze generate in EUR: 1003.72\n",
       "Totale plusvalenze generate in USDC: 0\n"
      ]
     }
@@ -446,6 +446,118 @@
        "      <td>2024-12-01T16:26:48.283Z</td>\n",
        "      <td>53.65</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>62114233</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>230.421716</td>\n",
+       "      <td>0.00245</td>\n",
+       "      <td>94049.68</td>\n",
+       "      <td>0.691265</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-08T15:27:52.07Z</td>\n",
+       "      <td>85.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>62114234</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>19.768999</td>\n",
+       "      <td>0.00021</td>\n",
+       "      <td>94138.09</td>\n",
+       "      <td>0.059307</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-08T15:27:52.07Z</td>\n",
+       "      <td>7.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>62165480</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>162.930026</td>\n",
+       "      <td>0.00167</td>\n",
+       "      <td>97562.89</td>\n",
+       "      <td>0.488790</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-15T16:18:14.813Z</td>\n",
+       "      <td>58.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>62165481</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>19.535840</td>\n",
+       "      <td>0.00020</td>\n",
+       "      <td>97679.20</td>\n",
+       "      <td>0.058608</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-15T16:18:14.813Z</td>\n",
+       "      <td>7.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>62165482</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>77.089472</td>\n",
+       "      <td>0.00079</td>\n",
+       "      <td>97581.61</td>\n",
+       "      <td>0.231268</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-15T16:18:14.813Z</td>\n",
+       "      <td>28.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>62213358</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>19.235660</td>\n",
+       "      <td>0.00021</td>\n",
+       "      <td>91598.38</td>\n",
+       "      <td>0.057707</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-22T16:33:38.113Z</td>\n",
+       "      <td>5.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>62213359</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>77.780839</td>\n",
+       "      <td>0.00085</td>\n",
+       "      <td>91506.87</td>\n",
+       "      <td>0.233343</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-22T16:33:38.113Z</td>\n",
+       "      <td>23.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>62213360</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>106.105606</td>\n",
+       "      <td>0.00116</td>\n",
+       "      <td>91470.35</td>\n",
+       "      <td>0.318317</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-22T16:33:38.113Z</td>\n",
+       "      <td>36.76</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -468,6 +580,14 @@
        "85  62056525  BTC   EUR   19.255402  0.00021  91692.39   0.057766   \n",
        "86  62056526  BTC   EUR   76.944664  0.00084  91600.79   0.230834   \n",
        "87  62056527  BTC   EUR  135.535588  0.00148  91578.10   0.406607   \n",
+       "88  62114233  BTC   EUR  230.421716  0.00245  94049.68   0.691265   \n",
+       "89  62114234  BTC   EUR   19.768999  0.00021  94138.09   0.059307   \n",
+       "90  62165480  BTC   EUR  162.930026  0.00167  97562.89   0.488790   \n",
+       "91  62165481  BTC   EUR   19.535840  0.00020  97679.20   0.058608   \n",
+       "92  62165482  BTC   EUR   77.089472  0.00079  97581.61   0.231268   \n",
+       "93  62213358  BTC   EUR   19.235660  0.00021  91598.38   0.057707   \n",
+       "94  62213359  BTC   EUR   77.780839  0.00085  91506.87   0.233343   \n",
+       "95  62213360  BTC   EUR  106.105606  0.00116  91470.35   0.318317   \n",
        "\n",
        "   brokerage_currency  side                      date  Plusvalenze  \n",
        "54                EUR  SELL  2024-05-19T13:03:37.617Z         0.66  \n",
@@ -485,7 +605,15 @@
        "84                EUR  SELL   2024-11-24T16:25:47.87Z        94.50  \n",
        "85                EUR  SELL  2024-12-01T16:26:48.283Z         6.03  \n",
        "86                EUR  SELL  2024-12-01T16:26:48.283Z        28.70  \n",
-       "87                EUR  SELL  2024-12-01T16:26:48.283Z        53.65  "
+       "87                EUR  SELL  2024-12-01T16:26:48.283Z        53.65  \n",
+       "88                EUR  SELL   2024-12-08T15:27:52.07Z        85.41  \n",
+       "89                EUR  SELL   2024-12-08T15:27:52.07Z         7.33  \n",
+       "90                EUR  SELL  2024-12-15T16:18:14.813Z        58.13  \n",
+       "91                EUR  SELL  2024-12-15T16:18:14.813Z         7.11  \n",
+       "92                EUR  SELL  2024-12-15T16:18:14.813Z        28.04  \n",
+       "93                EUR  SELL  2024-12-22T16:33:38.113Z         5.47  \n",
+       "94                EUR  SELL  2024-12-22T16:33:38.113Z        23.18  \n",
+       "95                EUR  SELL  2024-12-22T16:33:38.113Z        36.76  "
       ]
      },
      "execution_count": 4,
