--- a/Real-time Rotazione multi-asset con medie mobili.ipynb
+++ b/Real-time Rotazione multi-asset con medie mobili.ipynb
@@ -2472,7 +2472,9 @@
     "window_grid_search = 360 # Consigliabile averlo maggiore di timeframe_grid_search (se \"timeframe_grid_search\" non compare in dynamical_variables), perchè altrimenti di fatto la grid search effettua delle mini-simulazioni in cui non ribilancia mai e il fattore di rendimento totale risulterà sempre uguale per tutte le combinazioni della grid search in questione\n",
     "func_monitor = ma_returns_prices\n",
     "\n",
-    "df_results = simulate_trading_strategy(crypto_prices.iloc[-timeframe-1:], initial_liquidity, initial_allocations, timeframe, timeframe_grid_search, mobile_window, weighting_factor, coef_liquidity_out, coef_liquidity_in, dynamical_variables, window_grid_search, func_monitor)\n",
+    "index = max(window_grid_search, timeframe) if len(dynamical_variables) > 0 else timeframe\n",
+    "\n",
+    "df_results = simulate_trading_strategy(crypto_prices.iloc[-index-1:], initial_liquidity, initial_allocations, timeframe, timeframe_grid_search, mobile_window, weighting_factor, coef_liquidity_out, coef_liquidity_in, dynamical_variables, window_grid_search, func_monitor)\n",
     "df_results"
    ]
   },
