Aggiunto VA modificato

--- a/Calcolatore plusvalenze.ipynb
+++ b/Calcolatore plusvalenze.ipynb
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Totale plusvalenze generate per BTC-EUR: 724.59\n",
+      "Totale plusvalenze generate per BTC-EUR: 794.73\n",
       "Totale plusvalenze generate per RNDR/RENDER-EUR: 19.77\n",
       "Totale plusvalenze generate per LINK-EUR: 248.31\n",
       "Totale plusvalenze generate per SEI-EUR: 0.55\n",
@@ -117,14 +117,14 @@
       "Totale plusvalenze generate per TAO-EUR: 0\n",
       "Totale plusvalenze generate per FET-USDC: 0\n",
       "\n",
-      "Totale plusvalenze generate in EUR: 1003.72\n",
+      "Totale plusvalenze generate in EUR: 1073.87\n",
       "Totale plusvalenze generate in USDC: 0\n"
      ]
     }
    ],
    "source": [
     "# Esempio di utilizzo\n",
-    "input_file_path = r\"C:\\Users\\Alessandro\\Downloads\\Report ordini YP.csv\"  # Nome del file CSV di input\n",
+    "input_file_path = r\"C:\\Users\\Alessandro\\Desktop\\Cartelle\\Mie\\Crypto\\Ordini 2024 YP.csv\"  # Nome del file CSV di input\n",
     "\n",
     "file = pd.read_csv(input_file_path)\n",
     "\n",
@@ -218,6 +218,7 @@
        "      <th>brokerage_currency</th>\n",
        "      <th>side</th>\n",
        "      <th>date</th>\n",
+       "      <th>order_id</th>\n",
        "      <th>Plusvalenze</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -234,6 +235,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-05-19T13:03:37.617Z</td>\n",
+       "      <td>SOR-21338581901</td>\n",
        "      <td>0.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -248,6 +250,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-05-21T13:30:08.083Z</td>\n",
+       "      <td>SOR-21405299210</td>\n",
        "      <td>3.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -262,6 +265,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-05-21T13:30:08.083Z</td>\n",
+       "      <td>SOR-21405299210</td>\n",
        "      <td>2.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -276,6 +280,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-06-20T10:36:22.507Z</td>\n",
+       "      <td>SOR-22347907848</td>\n",
        "      <td>0.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -290,6 +295,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-07-01T06:58:44.15Z</td>\n",
+       "      <td>SOR-22681222385</td>\n",
        "      <td>0.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -304,6 +310,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-11-10T18:08:27.963Z</td>\n",
+       "      <td>SOR-27248109092</td>\n",
        "      <td>3.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -318,6 +325,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-11-10T18:08:27.963Z</td>\n",
+       "      <td>SOR-27248109092</td>\n",
        "      <td>3.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -332,6 +340,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-11-10T18:08:27.963Z</td>\n",
+       "      <td>SOR-27248109092</td>\n",
        "      <td>54.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -346,6 +355,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-11-17T10:01:08.357Z</td>\n",
+       "      <td>SOR-27532300567</td>\n",
        "      <td>20.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -360,6 +370,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-11-17T10:01:08.357Z</td>\n",
+       "      <td>SOR-27532300567</td>\n",
        "      <td>160.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -374,6 +385,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-11-24T16:25:47.87Z</td>\n",
+       "      <td>SOR-27837853148</td>\n",
        "      <td>8.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -388,6 +400,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-11-24T16:25:47.87Z</td>\n",
+       "      <td>SOR-27837853148</td>\n",
        "      <td>32.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -402,6 +415,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-11-24T16:25:47.87Z</td>\n",
+       "      <td>SOR-27837853148</td>\n",
        "      <td>94.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -416,6 +430,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-01T16:26:48.283Z</td>\n",
+       "      <td>SOR-28147135664</td>\n",
        "      <td>6.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -430,6 +445,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-01T16:26:48.283Z</td>\n",
+       "      <td>SOR-28147135664</td>\n",
        "      <td>28.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -444,6 +460,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-01T16:26:48.283Z</td>\n",
+       "      <td>SOR-28147135664</td>\n",
        "      <td>53.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -458,6 +475,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-08T15:27:52.07Z</td>\n",
+       "      <td>SOR-28478009434</td>\n",
        "      <td>85.41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -472,6 +490,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-08T15:27:52.07Z</td>\n",
+       "      <td>SOR-28478009434</td>\n",
        "      <td>7.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -486,6 +505,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-15T16:18:14.813Z</td>\n",
+       "      <td>SOR-28808833120</td>\n",
        "      <td>58.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -500,6 +520,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-15T16:18:14.813Z</td>\n",
+       "      <td>SOR-28808833120</td>\n",
        "      <td>7.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -514,6 +535,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-15T16:18:14.813Z</td>\n",
+       "      <td>SOR-28808833120</td>\n",
        "      <td>28.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -528,6 +550,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-22T16:33:38.113Z</td>\n",
+       "      <td>SOR-29131386375</td>\n",
        "      <td>5.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -542,6 +565,7 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-22T16:33:38.113Z</td>\n",
+       "      <td>SOR-29131386375</td>\n",
        "      <td>23.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -556,7 +580,53 @@
        "      <td>EUR</td>\n",
        "      <td>SELL</td>\n",
        "      <td>2024-12-22T16:33:38.113Z</td>\n",
+       "      <td>SOR-29131386375</td>\n",
        "      <td>36.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>62254368</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>19.697572</td>\n",
+       "      <td>0.00022</td>\n",
+       "      <td>89534.42</td>\n",
+       "      <td>0.059093</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-29T18:10:22.11Z</td>\n",
+       "      <td>SOR-29415013076</td>\n",
+       "      <td>5.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>62254369</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>76.922674</td>\n",
+       "      <td>0.00086</td>\n",
+       "      <td>89444.97</td>\n",
+       "      <td>0.230768</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-29T18:10:22.11Z</td>\n",
+       "      <td>SOR-29415013076</td>\n",
+       "      <td>21.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>62254370</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>132.348734</td>\n",
+       "      <td>0.00148</td>\n",
+       "      <td>89424.82</td>\n",
+       "      <td>0.397046</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>2024-12-29T18:10:22.11Z</td>\n",
+       "      <td>SOR-29415013076</td>\n",
+       "      <td>42.81</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -588,32 +658,67 @@
        "93  62213358  BTC   EUR   19.235660  0.00021  91598.38   0.057707   \n",
        "94  62213359  BTC   EUR   77.780839  0.00085  91506.87   0.233343   \n",
        "95  62213360  BTC   EUR  106.105606  0.00116  91470.35   0.318317   \n",
+       "96  62254368  BTC   EUR   19.697572  0.00022  89534.42   0.059093   \n",
+       "97  62254369  BTC   EUR   76.922674  0.00086  89444.97   0.230768   \n",
+       "98  62254370  BTC   EUR  132.348734  0.00148  89424.82   0.397046   \n",
        "\n",
-       "   brokerage_currency  side                      date  Plusvalenze  \n",
-       "54                EUR  SELL  2024-05-19T13:03:37.617Z         0.66  \n",
-       "55                EUR  SELL  2024-05-21T13:30:08.083Z         3.81  \n",
-       "56                EUR  SELL  2024-05-21T13:30:08.083Z         2.40  \n",
-       "62                EUR  SELL  2024-06-20T10:36:22.507Z         0.24  \n",
-       "66                EUR  SELL   2024-07-01T06:58:44.15Z         0.42  \n",
-       "77                EUR  SELL  2024-11-10T18:08:27.963Z         3.02  \n",
-       "78                EUR  SELL  2024-11-10T18:08:27.963Z         3.01  \n",
-       "79                EUR  SELL  2024-11-10T18:08:27.963Z        54.53  \n",
-       "80                EUR  SELL  2024-11-17T10:01:08.357Z        20.49  \n",
-       "81                EUR  SELL  2024-11-17T10:01:08.357Z       160.79  \n",
-       "82                EUR  SELL   2024-11-24T16:25:47.87Z         8.00  \n",
-       "83                EUR  SELL   2024-11-24T16:25:47.87Z        32.90  \n",
-       "84                EUR  SELL   2024-11-24T16:25:47.87Z        94.50  \n",
-       "85                EUR  SELL  2024-12-01T16:26:48.283Z         6.03  \n",
-       "86                EUR  SELL  2024-12-01T16:26:48.283Z        28.70  \n",
-       "87                EUR  SELL  2024-12-01T16:26:48.283Z        53.65  \n",
-       "88                EUR  SELL   2024-12-08T15:27:52.07Z        85.41  \n",
-       "89                EUR  SELL   2024-12-08T15:27:52.07Z         7.33  \n",
-       "90                EUR  SELL  2024-12-15T16:18:14.813Z        58.13  \n",
-       "91                EUR  SELL  2024-12-15T16:18:14.813Z         7.11  \n",
-       "92                EUR  SELL  2024-12-15T16:18:14.813Z        28.04  \n",
-       "93                EUR  SELL  2024-12-22T16:33:38.113Z         5.47  \n",
-       "94                EUR  SELL  2024-12-22T16:33:38.113Z        23.18  \n",
-       "95                EUR  SELL  2024-12-22T16:33:38.113Z        36.76  "
+       "   brokerage_currency  side                      date         order_id  \\\n",
+       "54                EUR  SELL  2024-05-19T13:03:37.617Z  SOR-21338581901   \n",
+       "55                EUR  SELL  2024-05-21T13:30:08.083Z  SOR-21405299210   \n",
+       "56                EUR  SELL  2024-05-21T13:30:08.083Z  SOR-21405299210   \n",
+       "62                EUR  SELL  2024-06-20T10:36:22.507Z  SOR-22347907848   \n",
+       "66                EUR  SELL   2024-07-01T06:58:44.15Z  SOR-22681222385   \n",
+       "77                EUR  SELL  2024-11-10T18:08:27.963Z  SOR-27248109092   \n",
+       "78                EUR  SELL  2024-11-10T18:08:27.963Z  SOR-27248109092   \n",
+       "79                EUR  SELL  2024-11-10T18:08:27.963Z  SOR-27248109092   \n",
+       "80                EUR  SELL  2024-11-17T10:01:08.357Z  SOR-27532300567   \n",
+       "81                EUR  SELL  2024-11-17T10:01:08.357Z  SOR-27532300567   \n",
+       "82                EUR  SELL   2024-11-24T16:25:47.87Z  SOR-27837853148   \n",
+       "83                EUR  SELL   2024-11-24T16:25:47.87Z  SOR-27837853148   \n",
+       "84                EUR  SELL   2024-11-24T16:25:47.87Z  SOR-27837853148   \n",
+       "85                EUR  SELL  2024-12-01T16:26:48.283Z  SOR-28147135664   \n",
+       "86                EUR  SELL  2024-12-01T16:26:48.283Z  SOR-28147135664   \n",
+       "87                EUR  SELL  2024-12-01T16:26:48.283Z  SOR-28147135664   \n",
+       "88                EUR  SELL   2024-12-08T15:27:52.07Z  SOR-28478009434   \n",
+       "89                EUR  SELL   2024-12-08T15:27:52.07Z  SOR-28478009434   \n",
+       "90                EUR  SELL  2024-12-15T16:18:14.813Z  SOR-28808833120   \n",
+       "91                EUR  SELL  2024-12-15T16:18:14.813Z  SOR-28808833120   \n",
+       "92                EUR  SELL  2024-12-15T16:18:14.813Z  SOR-28808833120   \n",
+       "93                EUR  SELL  2024-12-22T16:33:38.113Z  SOR-29131386375   \n",
+       "94                EUR  SELL  2024-12-22T16:33:38.113Z  SOR-29131386375   \n",
+       "95                EUR  SELL  2024-12-22T16:33:38.113Z  SOR-29131386375   \n",
+       "96                EUR  SELL   2024-12-29T18:10:22.11Z  SOR-29415013076   \n",
+       "97                EUR  SELL   2024-12-29T18:10:22.11Z  SOR-29415013076   \n",
+       "98                EUR  SELL   2024-12-29T18:10:22.11Z  SOR-29415013076   \n",
+       "\n",
+       "    Plusvalenze  \n",
+       "54         0.66  \n",
+       "55         3.81  \n",
+       "56         2.40  \n",
+       "62         0.24  \n",
+       "66         0.42  \n",
+       "77         3.02  \n",
+       "78         3.01  \n",
+       "79        54.53  \n",
+       "80        20.49  \n",
+       "81       160.79  \n",
+       "82         8.00  \n",
+       "83        32.90  \n",
+       "84        94.50  \n",
+       "85         6.03  \n",
+       "86        28.70  \n",
+       "87        53.65  \n",
+       "88        85.41  \n",
+       "89         7.33  \n",
+       "90        58.13  \n",
+       "91         7.11  \n",
+       "92        28.04  \n",
+       "93         5.47  \n",
+       "94        23.18  \n",
+       "95        36.76  \n",
+       "96         5.86  \n",
+       "97        21.48  \n",
+       "98        42.81  "
       ]
      },
      "execution_count": 4,
@@ -636,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
